stdout
compiling CircularBufferTest.cpp
In file included from CircularBufferTest.cpp:10:
CircularBuffer.h:13:29: error: 'CirularBuffer' was not declared in this scope; did you mean 'CircularBuffer'?
   13 | bool CircularBuffer_IsEmpty(CirularBuffer *);
      |                             ^~~~~~~~~~~~~
      |                             CircularBuffer
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:520: objs/CircularBufferTest.o] Error 1
